--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,5 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
-    <file>resources/header.png</file>
+    <file>resources/STARLIGHT_BRIGADE_UM.png</file>
 </qresource>
 </RCC>
