--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,7 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
     <file>resources/STARLIGHT_BRIGADE_UM.png</file>
+	<file>resources/SPRITE_BLACK.png</file>
+	<file>resources/tracker.ico</file>
 </qresource>
 </RCC>
